--- a/source/style.scss
+++ b/source/style.scss
@@ -1,1 +1,68 @@
-@import "zerostyle.scss"
+@import "zerostyle.scss";
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
+body{
+    background-color: #DEB887;
+};
+.header{
+    margin-top: 25px;
+    display: flex;
+    font-family: 'Courgette', cursive;
+    justify-content: space-around;
+};
+
+.title{
+    display: flex;
+}
+.fa-note-sticky{
+    font-size: 40px;
+    padding-right: 20px;
+    color: #C2FF3D ;
+}
+.logo{
+    color: white;
+    font-size: 40px;
+}
+.add_stick{
+    font-size: 20px;
+    border-radius: 5px;
+};
+.add_stick:hover{
+    background-color: gainsboro;
+}
+.container{
+    border: 1px solid black;
+    width: 1200px;
+    height: 100vh;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+transform:translate(-50%, -50%);
+height: 300px;
+width: 400px;
+};
+.textarea{
+    height: 300px;
+    width: 400px;
+    resize: none;
+    position: absolute
+};
+.fa-circle-xmark{
+    position: absolute;
+    margin-left: 365px;
+    margin-top: 10px;
+    font-size: 25px;
+}
+.fa-circle-xmark:hover{
+    color: red;
+    cursor: pointer;
+}
+
+.shadow {
+    box-shadow: 0 0 0 9999px rgba(0,0,0, 0.3);
+  }
