--- a/style.css
+++ b/style.css
@@ -105,6 +105,8 @@ body {
 .add_stick {
   font-size: 20px;
   border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .add_stick:hover {
@@ -112,17 +114,23 @@ body {
 }
 
 .container {
-  border: 1px solid black;
+  font-family: "Courgette", cursive;
   width: 1200px;
-  height: 100vh;
+  height: 100%;
+  margin-top: 25px;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .text {
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -137,6 +145,7 @@ body {
   width: 400px;
   resize: none;
   position: absolute;
+  font-size: 25px;
 }
 
 .fa-circle-xmark {
@@ -149,6 +158,15 @@ body {
 .fa-circle-xmark:hover {
   color: red;
   cursor: pointer;
+}
+
+.item {
+  -webkit-transform: rotate(5deg);
+          transform: rotate(5deg);
+  background-color: red;
+  height: 250px;
+  width: 250px;
+  margin-top: 25px;
 }
 
 .shadow {
