--- a/source/style.scss
+++ b/source/style.scss
@@ -44,13 +44,15 @@ body{
         flex-wrap: wrap;
 }
 .text {
-    display: none;
     position: absolute;
+    display: block;
     top: 50%;
     left: 50%;
 transform:translate(-50%, -50%);
 height: 300px;
 width: 400px;
+z-index: 1;
+box-shadow: 0 0 0 9999px rgba(0,0,0, 0.3);
 };
 .textarea{
     height: 300px;
@@ -77,7 +79,3 @@ width: 400px;
     width: 250px;
     margin-top: 25px;
 }
-
-.shadow {
-    box-shadow: 0 0 0 9999px rgba(0,0,0, 0.3);
-  }
