--- a/style.css
+++ b/style.css
@@ -130,14 +130,17 @@ body {
 }
 
 .text {
-  display: none;
   position: absolute;
+  display: block;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   height: 300px;
   width: 400px;
+  z-index: 1;
+  -webkit-box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
 }
 
 .textarea {
@@ -167,9 +170,4 @@ body {
   height: 250px;
   width: 250px;
   margin-top: 25px;
-}
-
-.shadow {
-  -webkit-box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
 }
