--- a/style.css
+++ b/style.css
@@ -115,18 +115,19 @@ body {
 
 .container {
   font-family: "Courgette", cursive;
-  width: 1200px;
+  width: 1400px;
   height: 100%;
-  margin-top: 25px;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding-top: 10px;
 }
 
 .text {
@@ -164,10 +165,16 @@ body {
 }
 
 .item {
-  -webkit-transform: rotate(5deg);
-          transform: rotate(5deg);
-  background-color: red;
-  height: 250px;
-  width: 250px;
-  margin-top: 25px;
+  cursor: pointer;
+  height: 300px;
+  width: 300px;
+  -webkit-box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.75);
+}
+
+.content {
+  text-align: center;
+  font-size: 25px;
+  margin: 15px;
+  word-wrap: break-word;
 }
