--- a/source/style.scss
+++ b/source/style.scss
@@ -1,86 +1,118 @@
 @import "zerostyle.scss";
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
 
-body{
-    background-color: #DEB887;
-};
-.header{
-    margin-top: 25px;
-    display: flex;
-    font-family: 'Courgette', cursive;
-    justify-content: space-around;
-};
+body {
+  background-color: #deb887
+}
+.header {
+  margin-top: 25px;
+  display: flex;
+  font-family: "Courgette", cursive;
+  justify-content: space-around;
+  width: 100%;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    justify-content: center;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+    justify-content: center;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 640px) and (max-width: 768px) {
+  }
+  @media screen and (min-width: 769px) and (max-width: 979px) {
+  }
+  @media screen and (min-width: 980px) and (max-width: 1199px) {
+  }
+  @media screen and (min-width: 1200px) {
+  }
+}
 
-.title{
-    display: flex;
+.title {
+  display: flex;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+    justify-content: center;
+  }
 }
-.fa-note-sticky{
-    font-size: 40px;
-    padding-right: 20px;
-    color: #C2FF3D ;
+.fa-note-sticky {
+  font-size: 40px;
+  padding-right: 20px;
+  color: #c2ff3d;
 }
-.logo{
-    color: white;
-    font-size: 40px;
+.logo {
+  color: white;
+  font-size: 40px;
 }
-.add_stick{
-    font-size: 20px;
-    border-radius: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-};
-.add_stick:hover{
-    background-color: gainsboro;
-}
-.container{
-    font-family: 'Courgette', cursive;
-    width: 1400px;
-    height: 100%;
+.add_stick {
+  font-size: 20px;
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 250px;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-top: 10px;
+  }
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.add_stick:hover {
+  background-color: gainsboro;
+}
+.container {
+  font-family: "Courgette", cursive;
+  width: 1400px;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 10px;
 }
 .text {
-    position: absolute;
-    display: block;
-    top: 50%;
-    left: 50%;
-transform:translate(-50%, -50%);
-height: 300px;
-width: 400px;
-z-index: 1;
-box-shadow: 0 0 0 9999px rgba(0,0,0, 0.3);
-};
-.textarea{
-    height: 300px;
-    width: 400px;
-    resize: none;
-    position: absolute;
-    font-size: 25px;
-
-};
-.fa-circle-xmark{
-    position: absolute;
-    margin-left: 365px;
-    margin-top: 10px;
-    font-size: 25px;
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 300px;
+  width: 400px;
+  z-index: 1;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
 }
-.fa-circle-xmark:hover{
-    color: red;
-    cursor: pointer;
+.textarea {
+  height: 300px;
+  width: 400px;
+  resize: none;
+  position: absolute;
+  font-size: 25px;
 }
-.item{
+.fa-circle-xmark {
+  position: absolute;
+  margin-left: 365px;
+  margin-top: 10px;
+  font-size: 25px;
+}
+.fa-circle-xmark:hover {
+  color: red;
   cursor: pointer;
-    height: 300px;
-    width: 300px;
-    box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75);
 }
-.content{
-    text-align: center;
-    font-size: 25px;
-    margin: 15px;
+.item {
+  cursor: pointer;
+  height: 300px;
+  width: 300px;
+  box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.75);
+}
+.content {
+  text-align: center;
+  font-size: 25px;
+  margin: 15px;
   word-wrap: break-word;
-};
+}
