--- a/source/style.scss
+++ b/source/style.scss
@@ -75,6 +75,23 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   padding-top: 10px;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+   width: 300px;
+  }
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+    width: 460px;
+  }
+  @media screen and (min-width: 640px) and (max-width: 768px) {
+    width: 620px;
+  }
+  @media screen and (min-width: 769px) and (max-width: 979px) {
+    width: 740px;
+  }
+  @media screen and (min-width: 980px) and (max-width: 1199px) {
+    width: 960px;
+  }
+  @media screen and (min-width: 1200px) {
+  }
 }
 .text {
   position: absolute;
@@ -86,6 +103,23 @@ body {
   width: 400px;
   z-index: 1;
   box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+   
+   }
+   @media screen and (min-width: 481px) and (max-width: 767px) {
+    
+   }
+   @media screen and (min-width: 640px) and (max-width: 768px) {
+     
+   }
+   @media screen and (min-width: 769px) and (max-width: 979px) {
+    
+   }
+   @media screen and (min-width: 980px) and (max-width: 1199px) {
+     
+   }
+   @media screen and (min-width: 1200px) {
+   }
 }
 .textarea {
   height: 300px;
