--- a/style.css
+++ b/style.css
@@ -179,7 +179,31 @@ body {
       flex-wrap: wrap;
   padding-top: 10px;
 }
-
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .container {
+    width: 300px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 767px) {
+  .container {
+    width: 460px;
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 768px) {
+  .container {
+    width: 620px;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 979px) {
+  .container {
+    width: 740px;
+  }
+}
+@media screen and (min-width: 980px) and (max-width: 1199px) {
+  .container {
+    width: 960px;
+  }
+}
 .text {
   position: absolute;
   display: block;
@@ -193,7 +217,6 @@ body {
   -webkit-box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
           box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
 }
-
 .textarea {
   height: 300px;
   width: 400px;
