--- a/source/style.scss
+++ b/source/style.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
 
 body {
-  background-color: #deb887
+  background-color: #deb887;
 }
 .header {
   margin-top: 25px;
@@ -76,7 +76,7 @@ body {
   flex-wrap: wrap;
   padding-top: 10px;
   @media screen and (min-width: 320px) and (max-width: 480px) {
-   width: 300px;
+    width: 300px;
   }
   @media screen and (min-width: 481px) and (max-width: 767px) {
     width: 460px;
@@ -103,23 +103,6 @@ body {
   width: 400px;
   z-index: 1;
   box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3);
-  @media screen and (min-width: 320px) and (max-width: 480px) {
-   
-   }
-   @media screen and (min-width: 481px) and (max-width: 767px) {
-    
-   }
-   @media screen and (min-width: 640px) and (max-width: 768px) {
-     
-   }
-   @media screen and (min-width: 769px) and (max-width: 979px) {
-    
-   }
-   @media screen and (min-width: 980px) and (max-width: 1199px) {
-     
-   }
-   @media screen and (min-width: 1200px) {
-   }
 }
 .textarea {
   height: 300px;
